Fixed margins on mobile

--- a/css/Responsive.css
+++ b/css/Responsive.css
@@ -6,7 +6,7 @@
       font-size: .75em;
     }
     .nav-links {
-      
+      padding-right: 2%;
     }
   
     .nav-bar {
@@ -29,11 +29,13 @@
     }
 
     .about-me-img {
-        grid-column: 2 / 5;
+        grid-column: 1 / 6;
     }
 
     .about-me p {
-        grid-column: 2 / 5;
+        grid-column: 1 / 6;
+        margin-left: 5%;
+        margin-right: 5%;
     }
 
     .about-me ul {
@@ -41,7 +43,9 @@
     }
 
     article {
-        grid-column: 2 / 5;
+        grid-column: 1 / 6;
+        margin-left: 5%;
+        margin-right: 5%;
     }
 
     .contact-h2 {
